[tool.poetry]
name = "py-code"
version = "0.1.0"
description = ""
authors = ["Asaki Asako <asakiasako@foxmail.com>"]
packages = [
    { include = "./src/__main__.py" },
    { include = "./__scripts.py" },
]

[tool.poetry.scripts]
build = "__scripts:build"

[tool.poetry.dependencies]
python = "^3.8.10"
msgpack = "^1.0.2"
grpcio = "^1.38.1"
protobuf = "^3.17.3"
peewee = "^3.14.4"
PyVISA = "^1.11.3"
pyserial = "^3.5"
requests = "^2.25.1"
XlsxWriter = "^1.4.3"
ftd2xx = "^1.1.2"

[tool.poetry.dev-dependencies]
pyinstaller = "^3.6"
pywin32-ctypes = "^0.2.0"
pefile = "^2021.5.24"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
